Updates dynamic interface
