# book-friends-server/dal/userDynamicDal.js
@@ -52,15 +52,32 @@ async function queryDynamicIdsByUserId (userId, pageIndex) {
 }
 
 /**
+ * Querys dynamic ids of userIds.
+ * @param {*Array} userIds
+ * @param {*Number} pageIndex
+ */
+async function queryDynamicIdsByUserIds (userIds, pageIndex) {
+  let ids = []
+
+  if (userIds && pageIndex > 0) {
+    const skipCount = (pageIndex - 1) * PAGE_SIZE
+    ids = await UserDynamicInfo.find({userId: {$in: userIds}, isActive: true}, '-_id id createTime').sort({'createTime': -1})
+      .skip(skipCount).limit(PAGE_SIZE)
+  }
+
+  return ids
+}
+
+/**
  * Querys the all dynamic infos.
  * @param {*Number} pageIndex
  */
-async function queryAllDaynamicInfos (pageIndex) {
+async function queryAllDynamicInfos (pageIndex) {
   let ids = null
 
   if (pageIndex > 0) {
     const skipCount = (pageIndex - 1) * PAGE_SIZE
-    ids = await UserDynamicInfo.find({isActive: true}, '-_id -__v id createTime').sort({'createTime': -1})
+    ids = await UserDynamicInfo.find({isActive: true}, '-_id id createTime').sort({'createTime': -1})
       .skip(skipCount).limit(PAGE_SIZE)
   }
 
@@ -75,14 +92,15 @@ async function queryDynamicInfoByDynamicId (dynamicId) {
   let data = null
 
   if (dynamicId) {
-    data = await UserDynamicInfo.findOne({id: dynamicId, isActive: true}, '-_id id content likeCount createTime isbn')
+    data = await UserDynamicInfo.findOne({id: dynamicId, isActive: true}, '-_id id content likeCount createTime isbn userId')
   }
 
   return data
 }
 
 exports.addDynamicInfo = addDynamicInfo
-exports.queryAllDaynamicInfos = queryAllDaynamicInfos
+exports.queryAllDynamicInfos = queryAllDynamicInfos
 exports.updateDynamicLikeCount = updateDynamicLikeCount
 exports.queryDynamicIdsByUserId = queryDynamicIdsByUserId
+exports.queryDynamicIdsByUserIds = queryDynamicIdsByUserIds
 exports.queryDynamicInfoByDynamicId = queryDynamicInfoByDynamicId
